--- a/config/crd/bases/logging.opni.io_datapreppers.yaml
+++ b/config/crd/bases/logging.opni.io_datapreppers.yaml
@@ -93,6 +93,9 @@ spec:
               version:
                 default: latest
                 type: string
+            required:
+            - username
+            - version
             type: object
           status:
             properties:
