--- a/config/crd/bases/logging.opni.io_loggingclusterbindings.yaml
+++ b/config/crd/bases/logging.opni.io_loggingclusterbindings.yaml
@@ -60,6 +60,8 @@ spec:
                   namespace:
                     type: string
                 type: object
+            required:
+            - opensearchClusterRef
             type: object
           status:
             properties:
