--- a/config/crd/bases/logging.opni.io_opniopensearches.yaml
+++ b/config/crd/bases/logging.opni.io_opniopensearches.yaml
@@ -484,6 +484,10 @@ spec:
                                 type: array
                             type: object
                         type: object
+                      annotations:
+                        additionalProperties:
+                          type: string
+                        type: object
                       basePath:
                         type: string
                       enable:
@@ -564,6 +568,10 @@ spec:
                           type: object
                           x-kubernetes-map-type: atomic
                         type: array
+                      labels:
+                        additionalProperties:
+                          type: string
+                        type: object
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -574,6 +582,74 @@ spec:
                             type: string
                         type: object
                         x-kubernetes-map-type: atomic
+                      pluginsList:
+                        items:
+                          type: string
+                        type: array
+                      podSecurityContext:
+                        properties:
+                          fsGroup:
+                            format: int64
+                            type: integer
+                          fsGroupChangePolicy:
+                            type: string
+                          runAsGroup:
+                            format: int64
+                            type: integer
+                          runAsNonRoot:
+                            type: boolean
+                          runAsUser:
+                            format: int64
+                            type: integer
+                          seLinuxOptions:
+                            properties:
+                              level:
+                                type: string
+                              role:
+                                type: string
+                              type:
+                                type: string
+                              user:
+                                type: string
+                            type: object
+                          seccompProfile:
+                            properties:
+                              localhostProfile:
+                                type: string
+                              type:
+                                type: string
+                            required:
+                            - type
+                            type: object
+                          supplementalGroups:
+                            items:
+                              format: int64
+                              type: integer
+                            type: array
+                          sysctls:
+                            items:
+                              properties:
+                                name:
+                                  type: string
+                                value:
+                                  type: string
+                              required:
+                              - name
+                              - value
+                              type: object
+                            type: array
+                          windowsOptions:
+                            properties:
+                              gmsaCredentialSpec:
+                                type: string
+                              gmsaCredentialSpecName:
+                                type: string
+                              hostProcess:
+                                type: boolean
+                              runAsUserName:
+                                type: string
+                            type: object
+                        type: object
                       replicas:
                         format: int32
                         type: integer
@@ -607,6 +683,81 @@ spec:
                               pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                               x-kubernetes-int-or-string: true
                             type: object
+                        type: object
+                      securityContext:
+                        properties:
+                          allowPrivilegeEscalation:
+                            type: boolean
+                          capabilities:
+                            properties:
+                              add:
+                                items:
+                                  type: string
+                                type: array
+                              drop:
+                                items:
+                                  type: string
+                                type: array
+                            type: object
+                          privileged:
+                            type: boolean
+                          procMount:
+                            type: string
+                          readOnlyRootFilesystem:
+                            type: boolean
+                          runAsGroup:
+                            format: int64
+                            type: integer
+                          runAsNonRoot:
+                            type: boolean
+                          runAsUser:
+                            format: int64
+                            type: integer
+                          seLinuxOptions:
+                            properties:
+                              level:
+                                type: string
+                              role:
+                                type: string
+                              type:
+                                type: string
+                              user:
+                                type: string
+                            type: object
+                          seccompProfile:
+                            properties:
+                              localhostProfile:
+                                type: string
+                              type:
+                                type: string
+                            required:
+                            - type
+                            type: object
+                          windowsOptions:
+                            properties:
+                              gmsaCredentialSpec:
+                                type: string
+                              gmsaCredentialSpecName:
+                                type: string
+                              hostProcess:
+                                type: boolean
+                              runAsUserName:
+                                type: string
+                            type: object
+                        type: object
+                      service:
+                        properties:
+                          loadBalancerSourceRanges:
+                            items:
+                              type: string
+                            type: array
+                          type:
+                            default: ClusterIP
+                            enum:
+                            - ClusterIP
+                            - NodePort
+                            - LoadBalancer
+                            type: string
                         type: object
                       tls:
                         properties:
@@ -1023,6 +1174,10 @@ spec:
                                   type: array
                               type: object
                           type: object
+                        annotations:
+                          additionalProperties:
+                            type: string
+                          type: object
                         component:
                           type: string
                         diskSize:
@@ -1133,6 +1288,8 @@ spec:
                                   type: string
                               type: object
                           type: object
+                        priorityClassName:
+                          type: string
                         replicas:
                           format: int32
                           type: integer
@@ -1321,6 +1478,9 @@ spec:
                 type: string
               version:
                 type: string
+            required:
+            - imageRepo
+            - natsCluster
             type: object
           status:
             properties:
