--- a/config/crd/bases/core.opni.io_alertingclusters.yaml
+++ b/config/crd/bases/core.opni.io_alertingclusters.yaml
@@ -1728,6 +1728,19 @@ spec:
                                   format: int32
                                   type: integer
                               type: object
+                            resizePolicy:
+                              items:
+                                properties:
+                                  resourceName:
+                                    type: string
+                                  restartPolicy:
+                                    type: string
+                                required:
+                                - resourceName
+                                - restartPolicy
+                                type: object
+                              type: array
+                              x-kubernetes-list-type: atomic
                             resources:
                               properties:
                                 claims:
