--- a/config/crd/bases/logging.opni.io_multiclusterusers.yaml
+++ b/config/crd/bases/logging.opni.io_multiclusterusers.yaml
@@ -43,6 +43,8 @@ spec:
                 type: object
               password:
                 type: string
+            required:
+            - opensearchClusterRef
             type: object
           status:
             properties:
