--- a/.drone.yml
+++ b/.drone.yml
@@ -36,6 +36,9 @@ steps:
         from_secret: codecov_token
       files:
         - cover.out
+    when:
+      instance:
+        - drone-publish.rancher.io
   - name: publish-tag
     image: docker
     environment: *environment
