--- a/config/crd/bases/core.opni.io_monitoringclusters.yaml
+++ b/config/crd/bases/core.opni.io_monitoringclusters.yaml
@@ -23052,6 +23052,9 @@ spec:
                         type: object
                       auth.gitlab:
                         properties:
+                          allow_assign_grafana_admin:
+                            nullable: true
+                            type: boolean
                           allow_sign_up:
                             nullable: true
                             type: boolean
@@ -23066,6 +23069,11 @@ spec:
                           client_secret:
                             type: string
                           enabled:
+                            nullable: true
+                            type: boolean
+                          role_attribute_path:
+                            type: string
+                          role_attribute_strict:
                             nullable: true
                             type: boolean
                           scopes:
@@ -23091,6 +23099,42 @@ spec:
                           scopes:
                             type: string
                           token_url:
+                            type: string
+                        type: object
+                      auth.jwt:
+                        properties:
+                          allow_assign_grafana_admin:
+                            nullable: true
+                            type: boolean
+                          auto_sign_up:
+                            nullable: true
+                            type: boolean
+                          cache_ttl:
+                            type: string
+                          email_claim:
+                            type: string
+                          enabled:
+                            nullable: true
+                            type: boolean
+                          expect_claims:
+                            type: string
+                          header_name:
+                            type: string
+                          jwk_set_file:
+                            type: string
+                          jwk_set_url:
+                            type: string
+                          key_file:
+                            type: string
+                          role_attribute_path:
+                            type: string
+                          role_attribute_strict:
+                            nullable: true
+                            type: boolean
+                          url_login:
+                            nullable: true
+                            type: boolean
+                          username_claim:
                             type: string
                         type: object
                       auth.ldap:
@@ -23210,6 +23254,8 @@ spec:
                         properties:
                           default_home_dashboard_path:
                             type: string
+                          min_refresh_interval:
+                            type: string
                           versions_to_keep:
                             nullable: true
                             type: integer
@@ -23257,14 +23303,32 @@ spec:
                         type: object
                       dataproxy:
                         properties:
+                          dialTimeout:
+                            type: integer
+                          expect_continue_timeout_seconds:
+                            type: integer
+                          idle_conn_timeout_seconds:
+                            type: integer
+                          keep_alive_seconds:
+                            type: integer
                           logging:
                             nullable: true
                             type: boolean
+                          max_conns_per_host:
+                            type: integer
+                          max_idle_connections:
+                            type: integer
+                          response_limit:
+                            type: integer
+                          row_limit:
+                            type: integer
                           send_user_header:
                             nullable: true
                             type: boolean
                           timeout:
                             nullable: true
+                            type: integer
+                          tls_handshake_timeout_seconds:
                             type: integer
                         type: object
                       external_image_storage:
@@ -26287,6 +26351,58 @@ spec:
                               type: integer
                             value:
                               type: string
+                          type: object
+                        type: array
+                      topologySpreadConstraints:
+                        items:
+                          properties:
+                            labelSelector:
+                              properties:
+                                matchExpressions:
+                                  items:
+                                    properties:
+                                      key:
+                                        type: string
+                                      operator:
+                                        type: string
+                                      values:
+                                        items:
+                                          type: string
+                                        type: array
+                                    required:
+                                    - key
+                                    - operator
+                                    type: object
+                                  type: array
+                                matchLabels:
+                                  additionalProperties:
+                                    type: string
+                                  type: object
+                              type: object
+                              x-kubernetes-map-type: atomic
+                            matchLabelKeys:
+                              items:
+                                type: string
+                              type: array
+                              x-kubernetes-list-type: atomic
+                            maxSkew:
+                              format: int32
+                              type: integer
+                            minDomains:
+                              format: int32
+                              type: integer
+                            nodeAffinityPolicy:
+                              type: string
+                            nodeTaintsPolicy:
+                              type: string
+                            topologyKey:
+                              type: string
+                            whenUnsatisfiable:
+                              type: string
+                          required:
+                          - maxSkew
+                          - topologyKey
+                          - whenUnsatisfiable
                           type: object
                         type: array
                     type: object
