--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,23 +2,11 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- logging/logging.opni.io_clusterflows.yaml
-- logging/logging.opni.io_clusteroutputs.yaml
-- logging/logging.opni.io_flows.yaml
-- logging/logging.opni.io_loggings.yaml
-- logging/logging.opni.io_outputs.yaml
-- logging/logging.opni.io_syslogngclusterflows.yaml
-- logging/logging.opni.io_syslogngclusteroutputs.yaml
-- logging/logging.opni.io_syslogngoutputs.yaml
-- logging/logging.opni.io_syslogngflows.yaml
-- nvidia/nvidia.opni.io_clusterpolicies.yaml
-- nfd/nfd.opni.io_nodefeaturediscoveries.yaml
 - opensearch/opensearch.opster.io_opensearchclusters.yaml
 - grafana/grafana.opni.io_grafanadashboards.yaml
 - grafana/grafana.opni.io_grafanadatasources.yaml
 - grafana/grafana.opni.io_grafananotificationchannels.yaml
 - grafana/grafana.opni.io_grafanas.yaml
-- bases/opni.io_gpupolicyadapters.yaml
 - bases/ai.opni.io_opniclusters.yaml
 - bases/ai.opni.io_pretrainedmodels.yaml
 - bases/core.opni.io_bootstraptokens.yaml
@@ -42,14 +30,14 @@ resources:
 - bases/logging.opni.io_preprocessors.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
+#patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_opniclusters.yaml
 # - patches/webhook_in_opnidemoes.yaml
 #- patches/webhook_in_logadapters.yaml
 #- patches/webhook_in_pretrainedmodels.yaml
-- patches/webhook_in_gpupolicyadapters.yaml
+#- patches/webhook_in_gpupolicyadapters.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -58,7 +46,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_opnidemoes.yaml
 #- patches/cainjection_in_logadapters.yaml
 #- patches/cainjection_in_pretrainedmodels.yaml
-- patches/cainjection_in_gpupolicyadapters.yaml
+#- patches/cainjection_in_gpupolicyadapters.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
