--- a/packages/opni/opni/charts/templates/gateway-post-install.yaml
+++ b/packages/opni/opni/charts/templates/gateway-post-install.yaml
@@ -9,7 +9,7 @@ metadata:
     {{- include "opni.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": post-install
-    "helm.sh/hook-delete-policy": hook-succeeded
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   template:
     metadata:
