refactor connect/notify stream client synchronization to be more robust; start working on tests

--- a/pkg/test/mock/mockgen.yaml
+++ b/pkg/test/mock/mockgen.yaml
@@ -3,6 +3,10 @@ mocks:
     dest: pkg/test/mock/apiextensions/apiextensions.go
     types:
       - ManagementAPIExtensionServer
+  - source: pkg/plugins/apis/apiextensions/stream/plugin.go
+    dest: pkg/test/mock/apiextensions/stream/plugin.go
+    types:
+      - StreamAPIExtension
   - source: pkg/apis/capability/v1/capability_grpc.pb.go
     dest: pkg/test/mock/capability/backend.go
     types:
