--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,9 @@
   "name": "opni",
   "version": "0.1.1",
   "private": false,
+  "bin": {
+    "protoc-gen-opni-services": "protoc-gen-opni-services/bin/protoc-gen-opni-services"
+  },
   "engines": {
     "node": ">=12"
   },
@@ -22,6 +25,13 @@
     "vue-fragment": "^1.6.0",
     "dayjs": "^1.8.16"
   },
+  "devDependencies": {
+    "@bufbuild/buf": "^1.21.0-1",
+    "@bufbuild/protobuf": "^1.2.1",
+    "@bufbuild/protoc-gen-es": "^1.2.1",
+    "@bufbuild/protoplugin": "^1.2.1",
+    "protoc-gen-opni-services": "file:./protoc-gen-opni-services/"
+  },
   "resolutions": {
     "**/webpack": "4",
     "@types/node": "^16"
@@ -33,6 +43,10 @@
     "build-pkg": "./node_modules/@rancher/shell/scripts/build-pkg.sh",
     "serve-pkgs": "./node_modules/@rancher/shell/scripts/serve-pkgs",
     "publish-pkgs": "./node_modules/@rancher/shell/scripts/extension/publish",
+
+    "codegen-plugin-build": "(cd ./protoc-gen-opni-services && yarn build)",
+    "codegen-plugin-install": "yarn install --force",
+    "codegen-dev": "yarn codegen-plugin-build && yarn codegen-plugin-install && echo \"\n\n\nGenerating...\n\" && npx buf generate ../plugins",
     
     "docker": "docker build -t opni-ui -f ./Dockerfile .",
     "build": "IS_STANDALONE=true ./node_modules/.bin/vue-cli-service build",
