Replace github.com/golang/mock with go.uber.org/mock

--- a/pkg/test/mock/mockgen.yaml
+++ b/pkg/test/mock/mockgen.yaml
@@ -42,6 +42,7 @@ mocks:
     types:
       - TokenStore
       - TenantStore
+      - ValueStoreT
   - source: pkg/util/streams/streams.go
     dest: pkg/test/mock/streams/streams.go
     types:
