clean up crd magefile targets

--- a/config/crd/bases/monitoring.opni.io_rolebindings.yaml
+++ b/config/crd/bases/monitoring.opni.io_rolebindings.yaml
@@ -29,6 +29,11 @@ spec:
             properties:
               id:
                 type: string
+              metadata:
+                properties:
+                  resourceVersion:
+                    type: string
+                type: object
               roleId:
                 type: string
               subjects:
