--- a/config/crd/bases/monitoring.opni.io_roles.yaml
+++ b/config/crd/bases/monitoring.opni.io_roles.yaml
@@ -53,6 +53,11 @@ spec:
                       type: string
                     type: object
                 type: object
+              metadata:
+                properties:
+                  resourceVersion:
+                    type: string
+                type: object
             type: object
         type: object
     served: true
